--- a/Jobs/src/styles.css
+++ b/Jobs/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/dist/css/bootstrap.css";
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+main{
+  font-size: 15px;
+  font-family: 'Barlow', sans-serif;
+  background-color: hsl(180, 52%, 96%);
+  min-height: 100vh;
+}
