--- a/Jobs/src/app/componentes/conteudo/conteudo.component.html
+++ b/Jobs/src/app/componentes/conteudo/conteudo.component.html
@@ -6,14 +6,16 @@
       </div>
       <div class="col-md-5 jobs-text">
         <div class="card-body description-job">
-          <h5 class="card-title">{{ job.company }}</h5>
+          <h5 class="card-title">{{ job.company }}
+          <button class="button-new" *ngIf="job.new == true, else semConteudo">NEW!</button>
+          <button class="button-featured" *ngIf="job.featured == true, else semConteudo">FEATURED</button></h5>
           <p class="card-text subtitle-job">{{ job.position }}</p>
           <p class="card-text"><small class="text-muted">{{ job.postedAt }} - {{ job.contract }} - {{ job.location }}</small></p>
         </div>
       </div>
       <div class="col-md-5 div-botoes">
         <div class="card-body botoes">
-          <button>{{ job.role }}</button>
+          <button >{{ job.role }}</button>
           <button>{{ job.level }}</button>
           <button *ngIf="job.languages[0], else semConteudo">{{ job.languages[0] }}</button>
           <button *ngIf="job.languages[1], else semConteudo">{{ job.languages[1] }}</button>
