--- a/Jobs/src/app/componentes/filtro/filtro.component.html
+++ b/Jobs/src/app/componentes/filtro/filtro.component.html
@@ -3,17 +3,17 @@
     <div class="row g-0">
       <div class="col-md-10 filter-buttons">
         <div class="div-jobs">
-          <button class="button-jobs">{{filtros.filtro[0]}}</button>
-          <button class="button-remove"><img class="img-remove" src="../../../assets/images/icon-remove.svg"></button>
-          <button class="button-jobs">{{filtros.filtro[1]}}</button>
-          <button class="button-remove"><img class="img-remove" src="../../../assets/images/icon-remove.svg"></button>
-          <button class="button-jobs">{{filtros.filtro[2]}}</button>
-          <button class="button-remove"><img class="img-remove" src="../../../assets/images/icon-remove.svg"></button>
+          <button class="button-jobs"   *ngIf="filtros.filtro[0], else semConteudo">{{filtros.filtro[0]}}</button>
+          <button class="button-remove" *ngIf="filtros.filtro[0], else semConteudo" (click)="limparSelecaoPosicao0()"><img class="img-remove" src="../../../assets/images/icon-remove.svg"></button>
+          <button class="button-jobs"   *ngIf="filtros.filtro[1], else semConteudo">{{filtros.filtro[1]}}</button>
+          <button class="button-remove" *ngIf="filtros.filtro[1], else semConteudo" (click)="limparSelecaoPosicao1()"><img class="img-remove" src="../../../assets/images/icon-remove.svg"></button>
+          <button class="button-jobs"   *ngIf="filtros.filtro[2], else semConteudo">{{filtros.filtro[2]}}</button>
+          <button class="button-remove" *ngIf="filtros.filtro[2], else semConteudo" (click)="limparSelecaoPosicao2()"><img class="img-remove" src="../../../assets/images/icon-remove.svg"></button>
         </div>
       </div>
       <div class="col-md-2">
         <div class="card-body button-clear">
-          <button>Clear</button>
+          <button (click)="limparFiltro()">Clear</button>
         </div>
       </div>
       <ng-template #semConteudo></ng-template>
